center search bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <main>
    <img src="logo.png" alt="Google logo" id="logo">
    <div>
-    <input type="text" placeholder="Search..">
+    <label for="search"></label>
+    <input type="text" id="search" placeholder="  Search Goodle or type a URL">
    </div>
 </main>
 
