--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 </head>
 
 <body>
+<nav>
+    <div id='nav-left'>
+        <a href=''>About</a>
+        <a href=''>Store</a>
+    </div>
+    <div id='nav-right'>
+        <a href=''>Gmail</a>
+        <a href=''>Images</a>
+        <img src="https://img.icons8.com/metro/26/000000/activity-grid-2.png" alt='grid-icon' id='grid'/>  
+        <button id='blue-btn'>Sign in</button>
+    </div>  
+</nav>
 <main>
    <img src="logo.png" alt="Google logo" id="logo">
    <div>
