add search buttons

--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
         <button id='blue-btn'>Sign in</button>
     </div>  
 </nav>
+
 <main>
-   <img src="logo.png" alt="Google logo" id="logo">
-   <div>
-    <label for="search"></label>
-    <input type="text" id="search" placeholder="  Search Goodle or type a URL">
-   </div>
+    <div id='main'>
+    <img src="logo.png" alt="Google logo" id="logo"> 
+        <input type="text" id="search" placeholder="  Search Google or type a URL">  
+        <div class='search-btns'>
+            <button class="search">Google Search</button>
+            <button class="search">I'm Feeling Lucky</button>
+        </div>
+    </div>
+   
 </main>
 
 </body>
