page is completed!

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <body>
 <nav>
-    <div id='nav-left'>
+    <div class='left'>
         <a href=''>About</a>
         <a href=''>Store</a>
     </div>
-    <div id='nav-right'>
+    <div class='right'>
         <a href=''>Gmail</a>
         <a href=''>Images</a>
         <img src="https://img.icons8.com/metro/26/000000/activity-grid-2.png" alt='grid-icon' id='grid'/>  
@@ -22,13 +22,25 @@
 <main>
     <div id='main'>
     <img src="logo.png" alt="Google logo" id="logo"> 
-        <input type="text" id="search" placeholder="  Search Google or type a URL">  
+        <input type="text" id="search-bar" placeholder="Made by Trina McLeary">  
         <div class='search-btns'>
             <button class="search">Google Search</button>
             <button class="search">I'm Feeling Lucky</button>
         </div>
     </div>
-   
+    
+    <footer>
+        <div class="left">
+            <a>Advertising</a>
+            <a>Business</a>
+            <a>How Search Works</a>
+        </div>
+        <div class="right">
+            <a>Privacy</a>
+            <a>Terms</a>
+            <a>Settings</a>
+        </div>
+    </footer>
 </main>
 
 </body>
