--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <main>
     <div id='main'>
+        <!-- replace logo img with individial SVG letters and animate when clicked!! -->
     <img src="logo.png" alt="Google logo" id="logo"> 
         <input type="text" id="search-bar" placeholder="Made by Trina McLeary">  
         <div class='search-btns'>
